--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
 <body>
 <%= render "layouts/header" %>
 <div id="container">
+<% flash.each do |key, value| %>
+  <div class="alert alert-<%= key %>"><%= value %></div>
+<% end %>
 <%= yield %>
 <%= render "layouts/footer" %>
 </div>
