--- a/app/views/users/wait_activation.html.erb
+++ b/app/views/users/wait_activation.html.erb
@@ -3,7 +3,7 @@
   <div class="banner banner-full jumbotron">
     <div class="wrap">
       <p>Thank you for registration. </p>
-      <p>An confirmation is sent to your email <%= @user.email %></p>
+      <p>A confirmation is sent to your email <%= @user.email %></p>
       <p>Please check and verify you account</p>
     </div>
   </div>
