--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
           <li><%= link_to "Login", signin_path %></li>
           <% else %>
           <li><%= link_to "Logout", signout_path, method: "delete" %></li>
+          <li><%= link_to "Settings", edit_user_path(@current_user), method: "delete" %></li>
           <% end %>
           <li><%= link_to "Search", "#" %></li>
         </ul>
