--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,11 +4,11 @@
       <div class="container">
         <ul class="nav pull-right">
           <li><%= link_to "Home", "/" %></li>
-          <% unless signed_in? %>
-          <li><%= link_to "Login", signin_path %></li>
+          <% unless user_signed_in? %>
+          <li><%= link_to "Login", new_user_session_path %></li>
           <% else %>
-          <li><%= link_to "Logout", signout_path, method: "delete" %></li>
-          <li><%= link_to "Settings", edit_user_path(@current_user), method: "delete" %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, method: "delete" %></li>
+          <li><%= link_to "Settings", edit_user_registration_path %></li>
           <% end %>
           <li><%= link_to "Search", "#" %></li>
         </ul>
