--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "All books") %>
+<% provide(:title, "Category #{ @category }") %>
 <div id="content1">
   <div class="jumbotron">
     <ul>
