--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
           <li><%= link_to "Settings", edit_user_registration_path %></li>
           <% end %>
           <li><%= link_to "Search", "#" %></li>
+          <li><%= link_to "Categories", categories_path %></li>
         </ul>
       </div>
     </div>
