--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,118 +10,5 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_self
+ *= require_tree
  */
-
- @import "bootstrap";
-
- $light_header: #62594f;
- $dark_header: #5b4635;
- $cart: #00a099;
- $price: #f29100;
- $add_light: #ffc400;
- $add_dark: #fdb62b;
-
- body {
-  font-family: "OpenSans";
-  background: url('http://images5.alphacoders.com/394/394911.jpg');
-  background-size: 100%;
-}
-
-.navbar-inverse {
-  background: url("images/");
-}
-
-.nav {
-  padding: 10px 0;
-  li {
-    display: inline-block;
-    border: none;
-    a {
-      font-size: 20px;
-      color: black;
-
-      &:hover {
-        color: #3333ee;
-      }
-    }
-  }
-}
-
-
-
-.brand {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-image: url("http://www.modgraphic.com/images/one%20book%20logo.png");
-  margin: -10px 5px 5px 75px;
-  height: 85px;
-  width: 320px;
-  display: block;
-  text-indent: -1500px;
-  overflow: hidden;
-  position: absolute;
-}
-
-#content {
-  margin-top: 200px;
-}
-
-#content1 {
-  margin-top: 100px;
-  text-align: center;
-}
-
-.jumbotron {
-  background: none repeat scroll 0% 0% rgba(255, 255, 255, 0.9);
-}
-
-h1, p {
-  text-align: center;
-}
-
-h1 {
-  font-size: 30px;
-  font-weight: 600;
-  letter-spacing: -5px;
-}
-
-.btn-large {
-  font-size: 30px;
-  font-weight: 500;
-}
-
-#new_user {
-  display: inline-block;
-}
-
-input {
-  width: 100%;
-  padding: 5px;
-  margin: 5px;
-  border-radius: 5px;
-}
-
-.hero-unit {
-  background: none repeat scroll 0% 0% rgba(255, 255, 255, 0.9);
-  width: 450px;
-  padding: 25px;
-  border-radius: 10px;
-  float: left;
-  margin-left: 50px;
-}
-
-.hero-unit1 {
-  background: none;
-  color: blue;
-  width: 700px;
-  padding: 25px;
-  border-radius: 10px;
-  float: left;
-  margin-left: 50px;
-}
-
-.container {
-  width: 95%;
-}
