--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -7,8 +7,8 @@
         | See &nbsp;
         = select_tag "per-page", "<option>1</option><option>2</option><option>3</option><option>4</option>".html_safe
         | &nbsp; books per page
-      = will_paginate @books
+      = paginate @books
     ul#show-books
       = render @books
     .page-head
-      = will_paginate @books
+      = paginate @books
