--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,41 @@
 <% provide(:title, "Sign up") %>
-<h2>Sign up</h2>
+<div id="content1">
+  <div class="jumbotron">
+    <h2 class="title1">Sign up</h2>
+    <p class="guide">Fill out the information below</p>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+      <div class="form-div">
+        <p class="form-div-title">Mandatory fields</p>
+        <div class="form-div-content">
+          <div><%= f.label :email %>
+          <%= f.email_field :email, autofocus: true %></div>
 
-  <div><%= f.label :full_name %><br />
-    <%= f.text_field :full_name %></div>
+          <div><%= f.label :password %>
+            <%= f.password_field :password, autocomplete: "off" %></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+          <div><%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+        </div>
+      </div>
+      <div class="form-div">
+        <p class="form-div-title">Optional fields</p>
+        <div class="form-div-content">
+          <div><%= f.label :full_name %>
+              <%= f.text_field :full_name %></div>
 
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+          <div><%= f.label :birthday %>
+            <%= f.text_field :birthday %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.label :birthday %><br />
-    <%= f.text_field :birthday %></div>
-
-  <div><%= f.label :phone %><br />
-    <%= f.text_field :phone %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+          <div><%= f.label :phone %>
+            <%= f.text_field :phone %></div>
+        </div>
+      </div>
+      <div><%= f.submit "Sign up", class: "btn-sign" %></div>
+    <% end %>
+    <div class="other">
+    <%= render "devise/shared/links" %>
+    </div>
+  </div>
+</div>
