--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,51 +1,2 @@
-header.navbar.navbar-fixed-top.navbar-inverse
-  .navbar-inner
-    a.brand href="/" rel="home" title=("Book Depositories")
-      span.black bookstore
-      span.white .com
-    .container
-      ul.nav.pull-right
-        - unless user_signed_in?
-          li= link_to "login", new_user_session_path, class: "has_arrow_down"
-          li |
-          li= link_to "register", new_user_registration_path
-        - else
-          li= link_to "logout", destroy_user_session_path, method: "delete"
-          li= link_to "settings", edit_user_registration_path
-.navbar.navbar-search
-  = form_tag books_search_path, method: "get", id: "search-top" do
-    = text_field_tag :search, params[:search], placeholder: "author, title"
-    = hidden_field_tag :category_search
-    = link_to content_tag(:i, "" ,class: "glyphicon glyphicon-search"), "#" ,id: "search-button"
-    = link_to "| all categories", "#", id: "category-search", class: "has_arrow_down"
-  .btn-group
-    button#category-select.btn.btn-default.dropdown-toggle data-toggle="dropdown" type="button"
-      | Art and something something
-      span.glyphicon.glyphicon-chevron-down
-    ul.dropdown-menu role="menu"
-      li
-        a href="#"  Action
-      li
-        a href="#"  Another action
-      li
-        a href="#"  Something else here
-      li.divider
-      li
-        a href="#"  Separated link
-  .btn-group
-    button#cart.btn.btn-default.dropdown-toggle data-toggle="dropdown" type="button"
-      = image_tag "cart.png"
-      | Basket (0 $) &nbsp;
-      span.circle 0
-      span.glyphicon.glyphicon-chevron-down
-    ul.dropdown-menu role="menu"
-      li
-        a href="#"  Action
-      li
-        a href="#"  Another action
-      li
-        a href="#"  Something else here
-      li.divider
-      li
-        a href="#"  Separated link
-
+= render "layouts/first_header"
+= render "layouts/second_header"
