--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,38 +1,47 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<% provide(:title, "Sign up") %>
+<div id="content1">
+  <div class="jumbotron">
+    <h2 class="title1">Edit <%= resource_name.to_s.humanize %></h2>
+    <p class="guide">Change the fields below</p>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
+      <div class="form-div">
+        <p class="form-div-title">Mandatory fields</p>
+        <div class="form-div-content">
+          <div><%= f.label :email %>
+          <%= f.email_field :email, autofocus: true %></div>
 
-  <div><%= f.label :full_name %><br />
-    <%= f.text_field :full_name %></div>
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <% end %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+          <div><%= f.label :password %>
+            <%= f.password_field :password, autocomplete: "off" %></div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+          <div><%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+          <div><%= f.label :current_password %>
+            <%= f.password_field :current_password, autocomplete: "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+          <div><%= f.label :full_name %>
+            <%= f.text_field :full_name %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+          <div><%= f.label :birthday %>
+            <%= f.text_field :birthday %></div>
 
-  <div><%= f.label :birthday %><br />
-    <%= f.text_field :birthday %></div>
-
-  <div><%= f.label :phone %><br />
-    <%= f.text_field :phone %></div>
-
-  <div><%= f.submit "Update" %></div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+          <div><%= f.label :phone %>
+            <%= f.text_field :phone %></div>
+        </div>
+      </div>
+      <div class="buttons"><%= f.submit "Update", class: "btn-sign" %></div>
+    <% end %>
+    <div>
+        <%= button_to "Unhappy? Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn-sign no-width-restrict" %>
+      </div>
+    <div class="other">
+      <%= link_to "Back", :back %>
+    </div>
+  </div>
+</div>
