--- a/app/views/line_items/show.html.erb
+++ b/app/views/line_items/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Book:</strong>
-  <%= @line_item.book %>
+  <%= @line_item.book.title %>
 </p>
 
 <p>
   <strong>Cart:</strong>
-  <%= @line_item.cart %>
+  <%= @line_item.cart.id %>
 </p>
 
 <%= link_to 'Edit', edit_line_item_path(@line_item) %> |
