Fixing rsolr issues

--- a/app/views/layouts/_cart.html.slim
+++ b/app/views/layouts/_cart.html.slim
@@ -12,7 +12,7 @@ ul#cart-menu.dropdown-menu role="menu"
   li.total
     span.title subtotal
     span.amount= @cart.line_items.count
-    span.price
+    span.price=
   li.total
     span.title delivery
     span.amount
