--- a/app/assets/javascripts/custom.js.erb
+++ b/app/assets/javascripts/custom.js.erb
@@ -37,25 +37,26 @@ $(function(){
   });
 
   $(".add-to-cart").click(function(){
-    $.post("line_items", { book_id: $(this).find(".hidden").html() }, function(o) {
+    $.post("/line_items", { book_id: $(this).find(".hidden").html() }, function(o) {
       book = o['book'];
+      if (o['is_new']) {
+        title_span = "<span class='title'>" + book['title'] + "</span>";
+        amount_span = "<span class='amount'>1</span>";
+        price_span = "<span class='price'>$" + book['unit_price'] + "</span>";
 
-      title_span = "<span class='title'>" + book['title'] + "</span>";
-      amount_span = "<span class='amount'>1</span>";
-      price_span = "<span class='price'>$" + book['unit_price'] + "</span>";
+        $("#cart-menu").prepend("<li id='cart-book-" + book['id'] + "'>" + title_span + amount_span + price_span + "</li>");
+      } else {
+        li_book = $("#cart-book-" + book['id']);
+        li_book.find(".amount").html(o["amount"]);
+        li_book.find(".price").html("$" + o["total_price"]);
+      }
 
-      subtotal = parseFloat($("#subtotal").html()) + parseFloat(book['unit_price']);
-      count = parseFloat($("#count").html()) + 1;
+      subtotal = parseFloat(o["subtotal"]);
       total = subtotal + 5;
 
-      $(".value-subtotal").html( "$" + subtotal.toFixed(1) );
+      $(".value-subtotal").html( "$" +  subtotal.toFixed(1) );
       $(".value-total").html( "$" + total.toFixed(1) );
-      $(".cart-count").html( count );
-
-      $("#subtotal").html(subtotal);
-      $("#count").html(count);
-
-      $("#cart-menu").prepend("<li>" + title_span + amount_span + price_span + "</li>");
+      $(".cart-count").html( o["quantity"] );
     });
   });
 });
