--- a/app/views/books/_book.html.slim
+++ b/app/views/books/_book.html.slim
@@ -17,7 +17,7 @@ li.pull-left
     span.price
       = book.unit_price
       | &nbsp;$
-    a.add-cart.add-to-cart href="#"
+    a.buttona.add-to-cart href="#"
       span.hidden= book.id
       span Add &nbsp;
       span
