--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -1,62 +1,60 @@
 - provide(:title, "Book #{@book.title}")
-#content1
-  .jumbotron
-    section.info
-      .span6
-        = image_tag @book.photo
-      .span2
-        h2.book-title= @book.title
-        p.book-author
-          | by &nbsp;
-          = @book.author_name
-        p
-          - stars = 0
-          - stars = (@book.total_rating_value * 1.0 / @book.total_rating_count).round if @book.total_rating_count > 0
-          - stars.times do
-            = image_tag "star-active.png"
-          - (5 - stars).times do
-            = image_tag "star-inactive.png"
-          span.rate-count &#40; #{@book.total_rating_count} &#41;
-        p.book-description= @book.description
-        p.publish
-          | Publisher:&nbsp;
-          = @book.publisher_name
-          br
-          | Published date:&nbsp;
-          = @book.published_date
-      .span7
-        .book-price
-          p.price
-            = @book.unit_price
-            | &nbsp;$
-          p.sale
-            | Save 20%
-            br
-            | Original $$$
-          br
+section.info
+  .span6
+    = image_tag @book.photo
+  .span2
+    h2.book-title= @book.title
+    p.book-author
+      | by &nbsp;
+      = @book.author_name
+    p
+      - stars = 0
+      - stars = (@book.total_rating_value * 1.0 / @book.total_rating_count).round if @book.total_rating_count > 0
+      - stars.times do
+        = image_tag "star-active.png"
+      - (5 - stars).times do
+        = image_tag "star-inactive.png"
+      span.rate-count &#40; #{@book.total_rating_count} &#41;
+    p.book-description= @book.description
+    p.publish
+      | Publisher:&nbsp;
+      = @book.publisher_name
+      br
+      | Published date:&nbsp;
+      = @book.published_date
+  .span7
+    .book-price
+      p.price
+        = @book.unit_price
+        | &nbsp;$
+      p.sale
+        | Save 20%
+        br
+        | Original $$$
+      br
 
-          p.button-cart
-            a.add-cart href="#"
-              span Add &nbsp;
-              span= image_tag "cart.png", width: 40, height: 30
-      .clear
-    section.add-comment
-      h2.title Add your comment
-      p#rating-stars
-      - 5.times do |n|
-        = image_tag "star-inactive.png", class: "rating-star"
-      p
-        = form_tag books_rating_path, method: "post", id: "form-rating" do
-          = hidden_field_tag "rating", 0, class: "rating"
-          = hidden_field_tag "book_id", @book.id
+      p.button-cart
+        a.buttona href="#"
+          span Add &nbsp;
+          span= image_tag "cart.png", width: 40, height: 30
+  .clear
+section.add-comment
+  h2.title Add your comment
+  p#rating-stars
+  - 5.times do |n|
+    = image_tag "star-inactive.png", class: "rating-star"
+  p
+    = form_tag books_rating_path, method: "post", id: "form-rating" do
+      = hidden_field_tag "rating", 0, class: "rating"
+      = hidden_field_tag "book_id", @book.id
 
-        = form_tag "#", method: "post" do
-          = text_area(:comment, :text, cols: 10)
-          br
-          span
-            = link_to "Cancel", "#"
-          = submit_tag "Send", class: "add-cart"
-    section.show-comment
-      h2.title Comments:(0)
+    = form_tag "#", method: "post" do
+      = text_area(:comment, :text, cols: 10)
+      br
+      span
+        = link_to "Cancel", "#"
+      = submit_tag "Send", class: "buttona"
+section.show-comment
+  h2.title Comments:(0)
 
 
