--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,5 +10,7 @@ html
     #container
       - flash.each do |key, value|
         div class=("alert alert-#{key}") = value
-      = yield
+      #content1
+        .jumbotron
+          = yield
       = render "layouts/footer"
