--- a/app/views/layouts/_cart.html.slim
+++ b/app/views/layouts/_cart.html.slim
@@ -8,29 +8,54 @@
 button#cart.btn.btn-default.dropdown-toggle data-toggle="dropdown" type="button"
   = image_tag "cart.png"
   | Basket (
-  span.value-total #{ total }&#36;
+  span.value-total #{ total.round(1) }&#36;
   | ) &nbsp;
   span.cart-count.circle= count
   span.glyphicon.glyphicon-chevron-down
-ul#cart-menu.dropdown-menu role="menu"
-  - @order.order_lines.each do |item|
-    li id="cart-book-#{ item.book.id }"
-      span.title= item.book.title
-      span.amount= item.quantity
-      span.price &#36;#{item.total_price}
-  li.total
-    span.title subtotal
-    span.cart-count.amount= count
-    span.value-subtotal.price &#36;#{ subtotal }
-  li.total
-    span.title delivery
-    span.amount
-    span.price &#36;#{delivery.round(1)}
-  li.total
-    span.title TOTAL
-    span.amount
-    span.value-total.price.big &#36;#{ total }
-  li.button-group
-    span.adjust1
-    span= button_to "Checkout", "#", class: "buttona", id: "checkout-cart"
-    span= button_to "Empty cart", @order, method: :delete, data: { confirm: 'Are you sure?' }, class: "buttona"
+
+- if @showcart
+  ul#cart-menu.dropdown-menu.visible
+    - @order.order_lines.each do |item|
+      li id="cart-book-#{ item.book.id }"
+        span.title= item.book.title
+        span.amount= item.quantity
+        span.price &#36;#{item.total_price}
+    li.total
+      span.title subtotal
+      span.cart-count.amount= count
+      span.value-subtotal.price &#36;#{ subtotal.round(1) }
+    li.total
+      span.title delivery
+      span.amount
+      span.price &#36;#{delivery.round(1)}
+    li.total
+      span.title TOTAL
+      span.amount
+      span.value-total.price.big &#36;#{ total.round(1) }
+    li
+      span.title
+      span.amount
+      span.price= link_to "Modify order"
+- else
+  ul#cart-menu.dropdown-menu role="menu"
+    - @order.order_lines.each do |item|
+      li id="cart-book-#{ item.book.id }"
+        span.title= item.book.title
+        span.amount= item.quantity
+        span.price &#36;#{item.total_price}
+    li.total
+      span.title subtotal
+      span.cart-count.amount= count
+      span.value-subtotal.price &#36;#{ subtotal.round(1) }
+    li.total
+      span.title delivery
+      span.amount
+      span.price &#36;#{delivery.round(1)}
+    li.total
+      span.title TOTAL
+      span.amount
+      span.value-total.price.big &#36;#{ total.round(1) }
+    li.button-group
+      span.adjust1
+      span= button_to "Checkout", edit_order_path(@order), method: :get, class: "buttona", id: "checkout-cart"
+      span= button_to "Empty cart", @order, method: :delete, data: { confirm: 'Are you sure?' }, class: "buttona"
