--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,3 +13,9 @@
     </div>
   </div>
 </div>
+<div class="adjust-height">
+</div>
+<div class="adjust-height">
+</div>
+<div class="adjust-height">
+</div>
