--- a/app/views/layouts/_cart.html.slim
+++ b/app/views/layouts/_cart.html.slim
@@ -1,6 +1,8 @@
 #cart_id.hidden = session[:cart_id]
-- subtotal = @order.total_price
-- count = @order.total_quantity
+- subtotal = count = 0
+- if @order
+  - subtotal = @order.total_price
+  - count = @order.total_quantity
 - delivery = 0
 - if subtotal > 0
   - delivery = 5
@@ -38,11 +40,12 @@ button#cart.btn.btn-default.dropdown-toggle data-toggle="dropdown" type="button"
       span.price= link_to "Modify order"
 - else
   ul#cart-menu.dropdown-menu role="menu"
-    - @order.order_lines.each do |item|
-      li id="cart-book-#{ item.book.id }"
-        span.title= item.book.title
-        span.amount= item.quantity
-        span.price &#36;#{item.total_price}
+    - if @order
+      - @order.order_lines.each do |item|
+        li id="cart-book-#{ item.book.id }"
+          span.title= item.book.title
+          span.amount= item.quantity
+          span.price &#36;#{item.total_price}
     li.total
       span.title subtotal
       span.cart-count.amount= count
@@ -55,7 +58,10 @@ button#cart.btn.btn-default.dropdown-toggle data-toggle="dropdown" type="button"
       span.title TOTAL
       span.amount
       span.value-total.price.big &#36;#{ total.round(1) }
-    li.button-group
-      span.adjust1
-      span= button_to "Checkout", edit_order_path(@order), method: :get, class: "buttona", id: "checkout-cart"
-      span= button_to "Empty cart", @order, method: :delete, data: { confirm: 'Are you sure?' }, class: "buttona"
+    - if @order
+      li.button-group
+        span.adjust1
+        span= button_to "Checkout", edit_order_path(@order), method: :get, class: "buttona", id: "checkout-cart"
+        span= button_to "Empty cart", @order, method: :delete, data: { confirm: 'Are you sure?' }, class: "buttona"
+    - else
+      li= link_to "You must login first", new_user_session_path
