--- a/app/assets/javascripts/custom.js.erb
+++ b/app/assets/javascripts/custom.js.erb
@@ -5,11 +5,7 @@ $(function(){
     $(this).prevAll().attr("src", "/assets/star-active.png");
     $(this).attr("src", "/assets/star-active.png");
     $(this).nextAll().attr("src", "/assets/star-inactive.png");
-  });
-
-  $(".rating-star").click(function(){
-    $(".rating").val($(".rating-star").index(this) + 1);
-    $("#form-rating").submit();
+    $("#comment_rating").val($(".rating-star").index(this) + 1);
   });
 
   $("#per-page").change(function(){
